建立第一個TestCase

--- a/UnitTestForBMICalc/UnitTestForBMICalc.csproj
+++ b/UnitTestForBMICalc/UnitTestForBMICalc.csproj
@@ -53,8 +53,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTestBMICalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BMICalculator\BMICalculator.csproj">
+      <Project>{8A152306-024D-4948-9ED9-FF5B6005E37A}</Project>
+      <Name>BMICalculator</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
